Eliminate "v-string in use/require non-portable" warning.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension URI::db.
 
 0.12
+      - Eliminated "v-string in use/require non-portable" warning on older
+        Perls.
 
 0.11  2014-01-03T20:01:01Z
       - Fixed URI::oracle to properly generate a DBI DSN with no host name or
