Switch MS SQL Server to ODBC.
Because otherwise one would need to have Sybase libraries to build
DBD::Sybase. Also, make URI::mssql the base class and have URI::sqlserver
inherit from it, rather than the other way around.

Since ODBC stuff is nearly always the same for the DBI interface, add
URI::_odbc as an abstract subclass for ODBC-connected database URIs to
use---at this point URI::mssql and URI::vertica.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for Perl extension URI::db.
 
 0.16
+      - Added new abstract class, URI::_odbc, for URIs that use ODBC in
+        `dbi_dsn`.
+      - The `dbi_dsn` method of URI::mssql now returns an ODBC DSN instead of
+        DBD::Sybase, since the latter would require Sybase to build.
+      - URI::sqlserver now inherits from URI::mssql rather than the other way
+        around.
 
 0.15  2014-09-04T00:29:46Z
       - Added the `canonical_engine` accessor, which returns the canonical
