Update copyright date.

--- a/README
+++ b/README
@@ -37,7 +37,7 @@ URI::db requires the following modules:
 Copyright and Licence
 ---------------------
 
-Copyright (c) 2013 David E. Wheeler. Some Rights Reserved.
+Copyright (c) 2013-2016 David E. Wheeler. Some Rights Reserved.
 
 This module is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
